--- a/MailGet/GMailGet/MainWindow.xaml
+++ b/MailGet/GMailGet/MainWindow.xaml
@@ -17,17 +17,18 @@
                 </GridView>
             </ListView.View>
         </ListView>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="400" Margin="348,145,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="350"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Height="400" Margin="348,145,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="372"/>
         <TextBox x:Name="textBox_userName" HorizontalAlignment="Left" Height="23" Margin="119,70,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
         <Label Content="userName" HorizontalAlignment="Left" Margin="42,70,0,0" VerticalAlignment="Top" Width="72"/>
         <Label Content="Pass" HorizontalAlignment="Left" Margin="246,70,0,0" VerticalAlignment="Top" Width="42"/>
         <PasswordBox x:Name="textBox_Pass" HorizontalAlignment="Left" Margin="288,72,0,0" VerticalAlignment="Top" Height="23" Width="139"/>
-        <Label Content="server" HorizontalAlignment="Left" Margin="441,68,0,0" VerticalAlignment="Top" Width="62"/>
-        <Button x:Name="button_connect" Content="接続" HorizontalAlignment="Left" Margin="508,116,0,0" VerticalAlignment="Top" Width="75" Click="button_connect_Click"/>
-        <ComboBox x:Name="combo_server" HorizontalAlignment="Left" Margin="508,74,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button_save" Content="設定の保存" HorizontalAlignment="Left" Margin="623,117,0,0" VerticalAlignment="Top" Width="75"/>
-        <ComboBox HorizontalAlignment="Left" Margin="181,17,0,0" VerticalAlignment="Top" Width="120"/>
-        <RadioButton x:Name="radio_old" Content="登録アカウントを使用" HorizontalAlignment="Left" Margin="42,24,0,0" VerticalAlignment="Top" IsChecked="True"/>
-        <RadioButton x:Name="radio_new" Content="新たに入力" HorizontalAlignment="Left" Margin="42,43,0,0" VerticalAlignment="Top" IsChecked="True"/>
+        <Label Content="server" HorizontalAlignment="Left" Margin="441,68,0,0" VerticalAlignment="Top" Width="46"/>
+        <Button x:Name="button_connect" Content="接続" HorizontalAlignment="Left" Margin="645,75,0,0" VerticalAlignment="Top" Width="75" Click="button_connect_Click"/>
+        <ComboBox x:Name="combo_server" HorizontalAlignment="Left" Margin="492,70,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="button_save" Content="設定の保存" HorizontalAlignment="Left" Margin="645,121,0,0" VerticalAlignment="Top" Width="75" Click="button_save_Click"/>
+        <ComboBox x:Name="combo_insert" HorizontalAlignment="Left" Margin="213,18,0,0" VerticalAlignment="Top" Width="120"/>
+        <RadioButton x:Name="radio_old" Content="登録アカウントを使用" HorizontalAlignment="Left" Margin="42,24,0,0" VerticalAlignment="Top" IsChecked="True" Checked="radio_old_Checked"/>
+        <RadioButton x:Name="radio_new" Content="新たに入力" HorizontalAlignment="Left" Margin="42,47,0,0" VerticalAlignment="Top" IsChecked="True" Checked="radio_new_Checked"/>
+        <Button x:Name="button_clear" Content="Clear" HorizontalAlignment="Left" Margin="537,116,0,0" VerticalAlignment="Top" Width="75" Click="button_clear_Click"/>
     </Grid>
 </Window>
