--- a/MailGet/GMailGet/MainWindow.xaml
+++ b/MailGet/GMailGet/MainWindow.xaml
@@ -1,12 +1,20 @@
-﻿<Window x:Class="MailGet.MainWindow"
+﻿<Window Title="MailGet"  x:Class="MailGet.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:GMailGet"
+        xmlns:tb="http://www.hardcodet.net/taskbar"
         mc:Ignorable="d"
-        Title="MainWindow" Height="636.522" Width="758.899">
-    <Grid Margin="0,0,2,-21">
+        Height="636.522" Width="784.399">
+    <Grid Margin="28,0,2,-21">
+        
+            <tb:TaskbarIcon x:Name="MyNotifyIcon"
+                  IconSource="pack://application:,,,/img/CsIcon.ico"
+                  ToolTipText="通知" Margin="0,0,-24,0">
+            </tb:TaskbarIcon>
+        
+        
         <ListView x:Name="listView" HorizontalAlignment="Left" Height="400" Margin="20,145,0,0" VerticalAlignment="Top" Width="313" ItemsSource="{Binding}" SelectionChanged="listView_SelectionChanged">
             <ListView.View>
                 <GridView>
@@ -23,12 +31,14 @@
         <Label Content="Pass" HorizontalAlignment="Left" Margin="246,70,0,0" VerticalAlignment="Top" Width="42"/>
         <PasswordBox x:Name="textBox_Pass" HorizontalAlignment="Left" Margin="288,72,0,0" VerticalAlignment="Top" Height="23" Width="139"/>
         <Label Content="server" HorizontalAlignment="Left" Margin="441,68,0,0" VerticalAlignment="Top" Width="46"/>
-        <Button x:Name="button_connect" Content="接続" HorizontalAlignment="Left" Margin="645,75,0,0" VerticalAlignment="Top" Width="75" Click="button_connect_Click"/>
+        <Button x:Name="button_connect" Content="接続" HorizontalAlignment="Left" Margin="645,70,0,0" VerticalAlignment="Top" Width="75" Click="button_connect_Click"/>
         <ComboBox x:Name="combo_server" HorizontalAlignment="Left" Margin="492,70,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="button_save" Content="設定の保存" HorizontalAlignment="Left" Margin="645,121,0,0" VerticalAlignment="Top" Width="75" Click="button_save_Click"/>
+        <Button x:Name="button_save" Content="設定の保存" HorizontalAlignment="Left" Margin="645,116,0,0" VerticalAlignment="Top" Width="75" Click="button_save_Click"/>
         <ComboBox x:Name="combo_insert" HorizontalAlignment="Left" Margin="213,18,0,0" VerticalAlignment="Top" Width="120"/>
         <RadioButton x:Name="radio_old" Content="登録アカウントを使用" HorizontalAlignment="Left" Margin="42,24,0,0" VerticalAlignment="Top" IsChecked="True" Checked="radio_old_Checked"/>
         <RadioButton x:Name="radio_new" Content="新たに入力" HorizontalAlignment="Left" Margin="42,47,0,0" VerticalAlignment="Top" IsChecked="True" Checked="radio_new_Checked"/>
         <Button x:Name="button_clear" Content="Clear" HorizontalAlignment="Left" Margin="537,116,0,0" VerticalAlignment="Top" Width="75" Click="button_clear_Click"/>
+        <Button x:Name="button_insert_delete" Content="削除" HorizontalAlignment="Left" Margin="352,18,0,0" VerticalAlignment="Top" Width="75" Click="button_insert_delete_Click"/>
+        <GridSplitter x:Name="gridSplitter" HorizontalAlignment="Left" Height="100" Margin="811,300,-67,0" VerticalAlignment="Top" Width="5"/>
     </Grid>
 </Window>
